--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@metaid/metaid": "^1.5.19",
     "meta-contract": "^0.3.35"
   }
 }
