--- a/conf/conf_example.yaml
+++ b/conf/conf_example.yaml
@@ -2,19 +2,25 @@
 net: "livenet"
 
 
-#rds
-rds:
+#database
+database:
+  indexer_type: "pebble"  # Indexer database type: mysql or pebble (uploader always uses mysql)
   dsn: "user:password@tcp(localhost:3306)/metaid_media_db?charset=utf8mb4&parseTime=True&loc=Local&timeout=5s&readTimeout=30s"
   max_open_conns: 1000
   max_idle_conns: 50
+  data_dir: "./data/pebble"  # PebbleDB data directory (used when indexer_type=pebble)
 
 # Indexer configuration
 indexer:
   port: "7281"   # Indexer service port
   scan_interval: 10
   batch_size: 100
-  start_height: 0
+  start_height: 0  # If 0, will use chain-specific init height or database max height
+  mvc_init_block_height: 350000  # MVC chain initial block height (used when start_height=0 and no data in DB)
+  btc_init_block_height: 800000  # BTC chain initial block height (used when start_height=0 and no data in DB)
   swagger_base_url: "localhost:7281"  # Swagger API base URL (shown in Swagger UI)
+  zmq_enabled: false  # Enable ZMQ real-time monitoring
+  zmq_address: "tcp://127.0.0.1:28332"  # ZMQ server address (for BTC/MVC node)
 
 # Uploader configuration
 uploader:
